--- a/src/app/Modules/home/home.component.html
+++ b/src/app/Modules/home/home.component.html
@@ -2,7 +2,9 @@
     <div class="container-home">
         <app-home-swiper-logo></app-home-swiper-logo>
         <app-banners></app-banners>
-        <app-home-swiper-list></app-home-swiper-list>
+        <div class="swiper-container">
+            <app-home-swiper-list></app-home-swiper-list>
+        </div>
         <div class="container-home__beauties">
             Look at the these beauties!
         </div>
