--- a/src/app/Modules/home/home.component.scss
+++ b/src/app/Modules/home/home.component.scss
@@ -52,6 +52,9 @@
     -webkit-text-fill-color: transparent;
     margin-bottom: 3.6rem;
 }
+.swiper-container{
+    margin:0 11% 0 11%;
+}
 @media (max-width: 500px) {
     .container-home {
         &__beauties {
