--- a/src/app/Modules/home/swiper-list/swiper-list.component.scss
+++ b/src/app/Modules/home/swiper-list/swiper-list.component.scss
@@ -20,7 +20,7 @@
     object-fit: cover;
 }
 .container__slider {
-    margin: 4rem 10% 0 12%;
+    margin: 4rem 0 0 0;
 }
 .container__block {
     @include wihi(16rem, 10rem);
