creat catalog page html and css

--- a/src/app/Modules/banners/banners.component.html
+++ b/src/app/Modules/banners/banners.component.html
@@ -2,7 +2,7 @@
     <a href="https://www.elinext.com" target="_blank" class="container__delivery flex justify-content-between">
         <div class="container__deliverys">
             <p class=" title">Flower delivery in Minsk</p>
-            <p><a class="container__linking little" href="">More details</a></p>
+            <p><a class="container__linking little">More details</a></p>
         </div>
         <div class="delivery__logo">
             <img id="delivery-image" src="../../../assets/img-home/car.jpg" alt="car">
@@ -11,7 +11,7 @@
     <a href="https://www.elinext.com" target="_blank" class="container__garden flex justify-content-between">
         <div class="container__gardens ">
             <p class=" title">Everything for your garden</p>
-            <p><a class="container__linking " href="">Discounts up to 50%</a></p>
+            <p><a class="container__linking ">Discounts up to 50%</a></p>
         </div>
         <div class="garden__logo">
             <img id="garden-image" src="../../../assets/img-home/FRa.png" alt="garden">
