--- a/src/app/Modules/banners/banners.component.scss
+++ b/src/app/Modules/banners/banners.component.scss
@@ -2,7 +2,7 @@
 @import "../../styles/_mixins.scss";
 
 .container__banner {
-    margin: 2.5rem 12%;
+    margin: 2.5rem 0;
     display: flex;
     justify-content: flex-start;
 }
