--- a/src/app/Modules/home/home.component.html
+++ b/src/app/Modules/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="wrapper-home">
     <div class="container-home">
         <app-home-swiper-logo></app-home-swiper-logo>
-        <app-banners></app-banners>
+        <div class="container-banners">
+            <app-banners></app-banners>
+        </div>
         <div class="swiper-container">
             <app-home-swiper-list></app-home-swiper-list>
         </div>
