--- a/src/app/Modules/news/newsarticle/newsarticle.component.html
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.html
@@ -47,6 +47,8 @@
             delivery of
             flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees and
             are always confident that your order will be delivered at the right time to the right place.</p>
-        <app-banners></app-banners>
+        <div class="container-banners">
+            <app-banners></app-banners>
+        </div>
     </div>
 </div>
