--- a/src/app/Modules/news/news.component.scss
+++ b/src/app/Modules/news/news.component.scss
@@ -7,7 +7,6 @@
 }
 .container-news {
     max-width: 100%;
-
     &__line {
         width: 78%;
         margin: 0 20% 2.8rem 12%;
@@ -41,6 +40,9 @@
             text-align: left;
         }
     }
+}
+.container-banners{
+    margin-left:12%;
 }
 .container__home {
     margin-right: 2.8rem;
@@ -154,6 +156,9 @@
     }
 }
 @media (max-width: 500px) {
+    .container-banners {
+        margin-left: 0;
+    }
     .container-news {
         &__line {
             width: 90%;
