--- a/src/app/Modules/news/newsarticle/newsarticle.component.scss
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.scss
@@ -50,6 +50,9 @@
         }
     }
 }
+.container-banners{
+    margin-left:12%;
+}
 .container__home {
     margin-right: 2.5rem;
     .container__link {
@@ -114,6 +117,9 @@
     }
 }
 @media (max-width: 500px) {
+    .container-banners {
+        margin-left: 0;
+    }
     .container-newsarticle {
         &__line {
             margin: 0 4% 0 $pt_2rem;
