--- a/src/app/Modules/home/swiper-list/swiper-list.component.html
+++ b/src/app/Modules/home/swiper-list/swiper-list.component.html
@@ -5,7 +5,7 @@
             [breakpoints]="adaptiveSwiper" class="myswiper">
             <ng-template swiperSlide *ngFor="let item of items">
                 <div class="container__block flex justify-content-center">
-                    <a [href]="item.link" class="container__link">
+                    <a class="container__link">
                         <img class="item-image" [src]="item.imageUrl" alt="logo1">
                         <h6 class="h6">{{item.title}}</h6>
                         <p class="container__paragraph">{{item.text}}</p>
