--- a/src/app/Modules/home/swiper-list/swiper-list.component.html
+++ b/src/app/Modules/home/swiper-list/swiper-list.component.html
@@ -3,12 +3,12 @@
         <swiper [slidesPerView]="swiperConfig.slidesPerView" [spaceBetween]="swiperConfig.spaceBetween"
             [loop]="swiperConfig.loop" [pagination]="swiperConfig.pagination" [navigation]="swiperConfig.navigation"
             [breakpoints]="adaptiveSwiper" class="myswiper">
-            <ng-template swiperSlide *ngFor="let item of items">
+            <ng-template swiperSlide *ngFor="let item of categoriesData|async">
                 <div class="container__block flex justify-content-center">
                     <a class="container__link">
-                        <img class="item-image" [src]="item.imageUrl" alt="logo1">
-                        <h6 class="h6">{{item.title}}</h6>
-                        <p class="container__paragraph">{{item.text}}</p>
+                        <img class="item-image" [src]="'images/fresh-flowers-photo'" alt="logo1">
+                        <h6 class="h6">{{item.name}}</h6>
+                        <p class="container__paragraph">{{item.description}}</p>
                     </a>
                 </div>
             </ng-template>
