--- a/src/app/Modules/catalog/catalog-items/catalog-items.component.scss
+++ b/src/app/Modules/catalog/catalog-items/catalog-items.component.scss
@@ -86,26 +86,23 @@
     }
 }
 .my-pag{
-   margin-left: 45%;
+   margin:0 auto;
 }
 .my-pag::ng-deep .ngx-pagination {
     margin-top: 1rem;
 }
-
 .my-pag::ng-deep .ngx-pagination .current {
     color: $color_darkgrey;
     border: 1px solid $color_pink;
     background: $color_white;
     border-radius: 10px;
 }
-
 .my-pag::ng-deep .ngx-pagination li {
     width: 5.7rem;
     height: 5.7rem;
     text-align: center;
     margin-left: 0.5rem;
 }
-
 .my-pag::ng-deep .ngx-pagination li span {
     display: inline-block;
     padding-top: 2rem;
@@ -113,7 +110,6 @@
     text-align: center;
     text-transform: uppercase;
 }
-
 .my-pag::ng-deep .ngx-pagination li {
     a {
         border-radius: 10px;
@@ -123,42 +119,50 @@
         background-color: $color_white;
         box-sizing: border-box;
     }
-
     a:hover {
         border: 1px solid $color_pink;
         border-radius: 10px;
     }
 }
-
 .my-pag::ng-deep .ngx-pagination li.ellipsis {
     margin-left: 0;
     margin-right: 0;
-
     a {
         border: 0px solid $color_lightgrey;
     }
 }
-@media (max-width: 1296px) {
+@media (max-width: 1460px) {
+.container__wrap {
+    margin-left: 1.9rem;
+}
+}
+@media (max-width: 1440px) {
+    .container__wrap {
+        flex: 0 0 31%;
+        margin-left: 1.85rem;
+    }
+
+}
+@media (max-width: 1435px) {
     .container__items {
         margin-left: 12%;
         flex-wrap: wrap;
     }
     .container__wrap {
-        flex: 0 0 40%;
+        flex: 0 0 42%;
         margin-bottom: 3rem;
     }
 }
-@media (max-width: 820px) {
+@media (max-width: 1270px) {
     .container__items {
-        margin: 0 2rem;
-        flex-wrap: wrap;
+        margin-left: 5%;
+        justify-content: space-between;
     }
     .container__wrap {
-        flex: 1 0 30rem;
-        margin-bottom: 3rem;
+        flex: 0 0 45%;
     }
 }
-@media (max-width: 710px) {
+@media (max-width: 1145px) {
     .container__items {
         margin: 0 $pt_2rem;
         display: block;
@@ -244,5 +248,24 @@
                 padding-left: 1.2rem;
             }
         }
+    }
+    .my-pag::ng-deep .ngx-pagination {
+        margin-left: $pt_2rem;
+    }
+}
+@media (max-width: 840px) {
+    .container__items {
+        margin-left: 0 ;
+    }
+    .container__wrap {
+        margin-left: 0;
+    }
+    .my-pag::ng-deep .ngx-pagination {
+        margin-left: 0;
+    }
+}
+@media (max-width: 840px) {
+    .my-pag{
+        margin-left: 0;
     }
 }
