--- a/src/app/Modules/catalog/catalog.component.scss
+++ b/src/app/Modules/catalog/catalog.component.scss
@@ -41,6 +41,8 @@
     }
     &__filter-products{
         margin-bottom: 6.5rem;
+        display: flex;
+        justify-content: flex-start;
     }
     &__filter{
         width: 25.5rem;
@@ -82,6 +84,8 @@
     &__products-title{
         margin-bottom: 3.1rem;
         margin-left: 1.5rem;
+        display: flex;
+        justify-content: space-between;
     }
     &__products{
         margin-left: 1.5rem;
@@ -90,6 +94,9 @@
     &__products-quantity{
         @include font(Montserrat, normal, 700, 1.8rem, 150%, 0em, $color_darkgrey);
         margin-top: 1.1rem;
+    }
+    &__mobile-buttons{
+        display: none;
     }
 }
 .container__home {
@@ -235,11 +242,12 @@
         color:$color_green;
         background-color: $color_white;
     }
-    ::ng-deep .container-catalog__filter-buttons-button2 .p-button-label {
+    ::ng-deep .p-button-success .p-button-label
+    {
         @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_green);
         text-transform: uppercase;
     }
-    ::ng-deep .container-catalog__filter-buttons-button2 .p-button-label:hover {
+    ::ng-deep .p-button-success .p-button-label:hover {
         color:$color_darkgreen;
     }
     ::ng-deep .p-button.p-button-success.p-button-outlined:hover {
@@ -307,295 +315,90 @@
         background: $color_pink;
     }
 }
-
 .field-checkbox {
     margin-bottom: 2rem;
 }
-
 .container-banners{
     margin-left: 14%;
 }
-
-
-
-
-
-.container__items {
-    margin: 0;
-    flex-wrap: wrap;
-    display: flex;
-    justify-content: flex-start;
-}
-
-.container__wrap {
-    flex: 0 0 31%;
-    margin-left: 1.95rem;
-    margin-bottom: 3rem;
-}
-
-.container__item {
-    @include wihi(25.5rem, 34.4rem);
-    border: 1px solid $color_lightgrey;
-    border-radius: 10px;
-    padding-bottom: $pb_1rem;
-    position: relative;
-
-    .image-item {
-        display: inline-block;
-        width: 17rem;
-        height: 17rem;
-        margin: 2.4rem 0 2.4rem 3.4rem;
-    }
-
-    .container__title {
-        @include font(Montserrat, normal, 700, 1.6rem, 120%, 0em, $color_darkgrey);
-        margin: 0 2.4rem;
-        width: 20rem;
-    }
-
-    .container__paragraph {
-        @include font(Montserrat, normal, 700, 1.6rem, 120%, 0em, $color_darkgrey);
-        margin: 0 2.4rem;
-        position: absolute;
-        top: 30.5rem;
-    }
-
-    .button {
-        opacity: 0;
+@media(max-width:1460px){
+    .wrapper-catalog {
+        width: 100%;
     }
 }
-
-.opacity {
-    @include font(Montserrat, normal, 500, 1.4rem, 150%, 0em, $color_grey);
-    margin: 0.5rem 2.4rem;
-    text-align: left;
+@media (max-width: 970px) {
+.container-banners {
+    margin-left: 3%;
 }
-
-.container__item:hover {
-    transition: 0.5s;
-    @include wihi(25.5rem, 42.5rem);
-    position: absolute;
-    z-index: 2;
-    background-color: $color_white;
-    box-sizing: border-box;
-    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
-
-    .button {
-        transition: 0.5s;
-        opacity: 1;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        @include wihi(20.7rem, 5.7rem);
-        background: $color_green;
-        border-radius: 10px;
-        margin: 7.5rem auto;
-
-        #imageBaggy {
-            width: 1.5rem;
+}
+@media (max-width: 886px) {
+    .container-catalog {
+        margin: 0 7.5% 3.5rem 3%;
+    }
+}
+@media (max-width: 840px) {
+    .container-catalog{
+        &__filter{
+        display: none;
         }
-
-        .button__paragraph {
-            @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_white);
-            text-align: left;
-            padding-left: 1rem;
-        }
-    }
-
-    .button:hover {
-        background: $color_darkgreen;
-    }
-
-    .button:active {
-        #imageBaggy {
-            padding-top: 0.2rem;
-        }
-
-        .button__paragraph {
-            padding-top: 0.2rem;
-        }
-    }
-}
-
-.my-pag {
-    margin-left: 45%;
-}
-
-.my-pag::ng-deep .ngx-pagination {
-    margin-top: 1rem;
-}
-
-.my-pag::ng-deep .ngx-pagination .current {
-    color: $color_darkgrey;
-    border: 1px solid $color_pink;
-    background: $color_white;
-    border-radius: 10px;
-}
-
-.my-pag::ng-deep .ngx-pagination li {
-    width: 5.7rem;
-    height: 5.7rem;
-    text-align: center;
-    margin-left: 0.5rem;
-}
-
-.my-pag::ng-deep .ngx-pagination li span {
-    display: inline-block;
-    padding-top: 2rem;
-    @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_darkgrey);
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.my-pag::ng-deep .ngx-pagination li {
-    a {
-        border-radius: 10px;
-        border: 1px solid $color_lightgrey;
-        width: 5.7rem;
-        height: 5.7rem;
-        background-color: $color_white;
-        box-sizing: border-box;
-    }
-
-    a:hover {
-        border: 1px solid $color_pink;
-        border-radius: 10px;
-    }
-}
-
-.my-pag::ng-deep .ngx-pagination li.ellipsis {
-    margin-left: 0;
-    margin-right: 0;
-
-    a {
-        border: 0px solid $color_lightgrey;
-    }
-}
-
-@media (max-width: 1296px) {
-    .container__items {
-        margin-left: 12%;
-        flex-wrap: wrap;
-    }
-
-    .container__wrap {
-        flex: 0 0 40%;
-        margin-bottom: 3rem;
-    }
-}
-
-@media (max-width: 820px) {
-    .container__items {
-        margin: 0 2rem;
-        flex-wrap: wrap;
-    }
-
-    .container__wrap {
-        flex: 1 0 30rem;
-        margin-bottom: 3rem;
-    }
-}
-
-@media (max-width: 710px) {
-    .container__items {
-        margin: 0 $pt_2rem;
+        &__filter-products{
         display: block;
-    }
-
-    .container__wrap {
-        margin-bottom: 3rem;
-    }
-
-    .container__item {
-        display: inline-block;
-        position: static;
-        opacity: 1;
-        width: 33.5rem;
-        height: 23.4rem;
-        background-color: $color_white;
-        box-sizing: border-box;
-
-        .image-item {
-            float: left;
-            width: 10.7rem;
-            height: 10.7rem;
-            margin: 2rem;
         }
-
-        .container__title {
-            width: 90%;
-            margin-top: 2rem;
+        &__products-title {
+            display: block;
+            margin-left: 0;
         }
-
-        .container__paragraph {
-            @include font(Montserrat, normal, bold, 1.6rem, 120%, 0em, $color_darkgrey);
-            margin: 2.4rem $pw_1-5rem;
-            position: static;
+        &__products {
+            margin-left: 0;
         }
-
-        .button {
-            opacity: 1;
+        &__mobile-buttons{
+            display: inline-block;
+            margin-top:$pt_2rem ;
+            margin-bottom: 4rem;
             display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            @include wihi(29.5rem, 5.7rem);
-            background: $color_green;
-            border-radius: 10px;
-            margin: 0 auto;
-
-            #imageBaggy {
-                width: 1.4rem;
-            }
-
-            .button__paragraph {
-                @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_white);
-                text-align: left;
-                padding-left: 1.2rem;
-            }
+            justify-content: space-between;
         }
     }
-
-    .container__item:hover {
-        display: inline-block;
-        position: static;
-        opacity: 1;
-        width: 33.5rem;
-        height: 23.4rem;
-        background-color: $color_white;
-
-        .image-item {
-            float: left;
-            width: 10.7rem;
-            height: 10.7rem;
-            margin: 2rem;
+    .dropdown-button{
+        display: none;
+    }
+}
+@media (max-width: 600px) {
+    :host{
+        ::ng-deep .p-button{
+            width: 15.8rem;
+            padding: 2rem 3.6rem;
         }
-
-        .container__title {
-            width: 90%;
-            margin-top: 2rem;
+    }
+}
+@media (max-width: 450px) {
+.container-catalog {
+    margin: 7rem 2rem 0 2rem;
+        &__path {
+            margin: 1.5rem auto;
         }
-
-        .button {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            @include wihi(29.5rem, 5.7rem);
-            background: $color_green;
-            border-radius: 10px;
-            margin: 0 auto;
-
-            #imageBaggy {
-                width: 1.4rem;
-            }
-
-            .button__paragraph {
-                @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_white);
-                text-align: left;
-                padding-left: 1.2rem;
-            }
+        &__line-main {
+            margin-bottom: 4rem;
         }
+        &__title {
+            background: $color_gradient;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-weight: 700;
+            font-size: 3.6rem;
+            line-height: 110%;
+            margin-right: 12%;
+            margin-bottom: 2.2rem;
+        }
+        &__text {
+            width: 33.5rem;
+            margin-bottom: 4rem;
+        }
+        &__filter-products {
+            margin-bottom: 6rem;
+        }   
+    }
+    .container-banners{
+        margin-left: 0;
     }
 }
