--- a/src/app/Modules/home/swiper-list/swiper-list.component.scss
+++ b/src/app/Modules/home/swiper-list/swiper-list.component.scss
@@ -14,6 +14,10 @@
     justify-content: center;
     align-items: top;
 }
+.big{
+    width: 5rem;
+    height: 5rem;
+}
 .swiper-slide img {
     display: block;
     @include wihi(100%, 100%);
